--- a/demo/egress-gateway/custom-egress-gateway-deployment.yaml
+++ b/demo/egress-gateway/custom-egress-gateway-deployment.yaml
@@ -1,27 +1,27 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: pipy-egress-gateway
+  name: pipy-custom-egress-gateway
   namespace: egress-gateway
   labels:
-    app: egress-gateway
+    app: custom-egress-gateway
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: egress-gateway
+      app: custom-egress-gateway
   strategy:
     type: RollingUpdate
   template:
     metadata:
       labels:
-        app: egress-gateway
+        app: custom-egress-gateway
       annotations:
         prometheus.io/path: '/stats/prometheus'
         prometheus.io/port: '15010'
         prometheus.io/scrape: 'true'
     spec:
-      serviceAccountName: egress-gateway
+      serviceAccountName: custom-egress-gateway
       containers:
         - name: pipy
           image: flomesh/pipy-repo:latest
@@ -52,4 +52,4 @@ spec:
       volumes:
         - name: egress-gateway-pjs
           configMap:
-            name: egress-gateway-pjs
+            name: custom-egress-gateway-pjs
