--- a/demo/egress-gateway/custom-egress-gateway-service.yaml
+++ b/demo/egress-gateway/custom-egress-gateway-service.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: egress-gateway
+  name: custom-egress-gateway
   namespace: egress-gateway
   labels:
-    app: egress-gateway
+    app: custom-egress-gateway
 spec:
   ports:
     - port: 1080
       name: pipy-socks-port
       appProtocol: tcp
   selector:
-    app: egress-gateway
+    app: custom-egress-gateway
