--- a/demo/access-control/curl.yaml
+++ b/demo/access-control/curl.yaml
@@ -3,6 +3,20 @@ kind: ServiceAccount
 metadata:
   name: curl
 ---
+apiVersion: v1
+kind: Service
+metadata:
+  name: curl
+  labels:
+    app: curl
+    service: curl
+spec:
+  ports:
+    - name: http
+      port: 80
+  selector:
+    app: curl
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
