--- a/demo/circuit-breaking/fortio-client.yaml
+++ b/demo/circuit-breaking/fortio-client.yaml
@@ -1,3 +1,8 @@
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: fortio-client
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -12,6 +17,7 @@ spec:
       labels:
         app: fortio-client
     spec:
+      serviceAccountName: fortio-client
       containers:
       - name: fortio-client
         image: fortio/fortio:latest_release
