--- a/demo/merbridge/helloworld.yaml
+++ b/demo/merbridge/helloworld.yaml
@@ -33,7 +33,7 @@ spec:
     spec:
       containers:
       - name: helloworld
-        image: localhost:5000/flomesh/examples-helloworld-v1
+        image: cybwan/examples-helloworld-v1
         resources:
           requests:
             cpu: "100m"
@@ -62,7 +62,7 @@ spec:
     spec:
       containers:
       - name: helloworld
-        image: localhost:5000/flomesh/examples-helloworld-v2
+        image: cybwan/examples-helloworld-v2
         resources:
           requests:
             cpu: "100m"
