Update bidirectional mtls demo.

--- a/demo/bidirection-mtls-nginx/server.yaml
+++ b/demo/bidirection-mtls-nginx/server.yaml
@@ -38,6 +38,6 @@ spec:
       - image: cybwan/mtls-egress-demo-server
         imagePullPolicy: IfNotPresent
         name: server
-        command: ["server"]
+        command: ["/server"]
         ports:
         - containerPort: 8443
