Update bidirectional mtls demo.

--- a/demo/bidirection-mtls-nginx/client.yaml
+++ b/demo/bidirection-mtls-nginx/client.yaml
@@ -36,7 +36,7 @@ spec:
         kubernetes.io/os: linux
       containers:
       - image: cybwan/mtls-egress-demo-client
-        imagePullPolicy: IfNotPresent
+        imagePullPolicy: Always
         name: client
         command: ["/bin/sleep", "infinity"]
         ports:
