--- a/demo/bidirection-mtls-nginx/middle.yaml
+++ b/demo/bidirection-mtls-nginx/middle.yaml
@@ -36,7 +36,7 @@ spec:
         kubernetes.io/os: linux
       containers:
       - image: cybwan/mtls-egress-demo-middle
-        imagePullPolicy: IfNotPresent
+        imagePullPolicy: Always
         name: middle
         command: ["/middle"]
         ports:
