--- a/demo/bidirection-mtls-nginx/server.yaml
+++ b/demo/bidirection-mtls-nginx/server.yaml
@@ -36,7 +36,7 @@ spec:
         kubernetes.io/os: linux
       containers:
       - image: cybwan/mtls-egress-demo-server
-        imagePullPolicy: IfNotPresent
+        imagePullPolicy: Always
         name: server
         command: ["/server"]
         ports:
