Update Access Control demo.

--- a/demo/access-control/secret-curl.yaml
+++ b/demo/access-control/secret-curl.yaml
@@ -1,37 +1,37 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: curl
+  name: secret-curl
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: curl
+  name: secret-curl
   labels:
-    app: curl
-    service: curl
+    app: secret-curl
+    service: secret-curl
 spec:
   ports:
     - name: http
       port: 80
   selector:
-    app: curl
+    app: secret-curl
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: curl
+  name: secret-curl
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: curl
+      app: secret-curl
   template:
     metadata:
       labels:
-        app: curl
+        app: secret-curl
     spec:
-      serviceAccountName: curl
+      serviceAccountName: secret-curl
       nodeSelector:
         kubernetes.io/os: linux
       containers:
@@ -39,3 +39,11 @@ spec:
         imagePullPolicy: IfNotPresent
         name: curl
         command: ["sleep", "365d"]
+        volumeMounts:
+        - name: curl-mtls-secret
+          mountPath: "/certs"
+          readOnly: true
+      volumes:
+        - name: curl-mtls-secret
+          secret:
+            secretName: curl-mtls-secret
