--- a/demo/bidirection-mtls-access-control/middle-mtls.yaml
+++ b/demo/bidirection-mtls-access-control/middle-mtls.yaml
@@ -41,3 +41,11 @@ spec:
         command: ["/middle"]
         ports:
         - containerPort: 8080
+        volumeMounts:
+          - name: client-mtls-secret
+            mountPath: "/certs"
+            readOnly: true
+      volumes:
+        - name: client-mtls-secret
+          secret:
+            secretName: bidi-mtls-client
