Update Bidirection mTLS Demo.

--- a/demo/bidirection-mtls-access-control/client-mtls.yaml
+++ b/demo/bidirection-mtls-access-control/client-mtls.yaml
@@ -41,3 +41,11 @@ spec:
         command: ["/bin/sleep", "infinity"]
         ports:
         - containerPort: 80
+        volumeMounts:
+          - name: client-mtls-secret
+            mountPath: "/certs"
+            readOnly: true
+      volumes:
+        - name: client-mtls-secret
+          secret:
+            secretName: bidi-mtls-client
