--- a/demo/multi-cluster/pipy-ok-c1.pipy-osm.yaml
+++ b/demo/multi-cluster/pipy-ok-c1.pipy-osm.yaml
@@ -31,6 +31,19 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
+  name: pipy-ok
+spec:
+  ports:
+    - name: pipy
+      port: 8080
+      targetPort: 8080
+      protocol: TCP
+  selector:
+    app: pipy-ok-c1
+---
+apiVersion: v1
+kind: Service
+metadata:
   name: pipy-ok-c1
 spec:
   ports:
