--- a/demo/rate-limit/fortio.yaml
+++ b/demo/rate-limit/fortio.yaml
@@ -1,4 +1,9 @@
 apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: server
+---
+apiVersion: v1
 kind: Service
 metadata:
   name: fortio
@@ -30,6 +35,7 @@ spec:
       labels:
         app: fortio
     spec:
+      serviceAccountName: server
       containers:
       - name: fortio
         image: fortio/fortio:latest_release
