--- a/demo/traffic-split-v4/pipy-ok.pipy.yaml
+++ b/demo/traffic-split-v4/pipy-ok.pipy.yaml
@@ -1,7 +1,12 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: pipy
+  name: pipy-ok-v1
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: pipy-ok-v2
 ---
 apiVersion: v1
 kind: Service
@@ -63,7 +68,7 @@ spec:
         app: pipy-ok
         version: v1
     spec:
-      serviceAccountName: pipy
+      serviceAccountName: pipy-ok-v1
       containers:
         - name: pipy
           image: flomesh/pipy:latest
@@ -97,7 +102,7 @@ spec:
         app: pipy-ok
         version: v2
     spec:
-      serviceAccountName: pipy
+      serviceAccountName: pipy-ok-v2
       containers:
         - name: pipy
           image: flomesh/pipy:latest
