--- a/demo/egress-gateway/custom-egress-gateway-service.yaml
+++ b/demo/egress-gateway/custom-egress-gateway-service.yaml
@@ -5,6 +5,8 @@ metadata:
   namespace: egress-gateway
   labels:
     app: custom-egress-gateway
+  annotations:
+    openservicemesh.io/egress-gateway-mode: sock5
 spec:
   ports:
     - port: 1080
@@ -12,3 +14,4 @@ spec:
       appProtocol: tcp
   selector:
     app: custom-egress-gateway
+    mode: sock5
