--- a/demo/cloud/consul/deployment-gateway-service.yaml
+++ b/demo/cloud/consul/deployment-gateway-service.yaml
@@ -1,14 +1,14 @@
-kind: Service
-apiVersion: v1
-metadata:
-  name: gateway-service
-spec:
-  selector:
-    app: gateway-service
-  type: LoadBalancer
-  ports:
-    - port: 80
-      targetPort: 8080
+#kind: Service
+#apiVersion: v1
+#metadata:
+#  name: gateway-service
+#spec:
+#  selector:
+#    app: gateway-service
+#  type: LoadBalancer
+#  ports:
+#    - port: 80
+#      targetPort: 8080
 
 
 ---
