--- a/demo/cloud/consul/deployment-product-service.yaml
+++ b/demo/cloud/consul/deployment-product-service.yaml
@@ -1,16 +1,14 @@
-kind: Service
-apiVersion: v1
-metadata:
-  name: product-service
-spec:
-  selector:
-    app: product-service
-  type: NodePort
-  ports:
-    - port: 80
-      targetPort: 9001
-
-
+#kind: Service
+#apiVersion: v1
+#metadata:
+#  name: product-service
+#spec:
+#  selector:
+#    app: product-service
+#  type: NodePort
+#  ports:
+#    - port: 80
+#      targetPort: 9001
 ---
 apiVersion: apps/v1
 kind: Deployment
