update spring cloud consul demo.

--- a/demo/cloud/consul/deployment-customer-service.yml
+++ b/demo/cloud/consul/deployment-customer-service.yml
@@ -34,5 +34,6 @@ spec:
       containers:
         - name: customer-service
           image: cybwan/spring-consul-demo:customer-service
+          imagePullPolicy: Always
           ports:
             - containerPort: 9002
