--- a/demo/cloud/consul/deployment-product-service.yaml
+++ b/demo/cloud/consul/deployment-product-service.yaml
@@ -29,5 +29,6 @@ spec:
       containers:
         - name: product-service
           image: cybwan/spring-consul-demo:product-service
+          imagePullPolicy: Always
           ports:
             - containerPort: 9001
