--- a/demo/cloud/consul/deployment-account-service.yml
+++ b/demo/cloud/consul/deployment-account-service.yml
@@ -26,7 +26,7 @@
 #  type: ClusterIP
 #  ports:
 #      port: 80
-#      targetPort: 9092
+#      targetPort: 9003
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -47,5 +47,6 @@ spec:
       containers:
         - name: account-service
           image: cybwan/spring-consul-demo:account-service
+          imagePullPolicy: Always
           ports:
             - containerPort: 9003
