--- a/demo/cloud/consul/deployment-account-service.yml
+++ b/demo/cloud/consul/deployment-account-service.yml
@@ -28,6 +28,11 @@
 #      port: 80
 #      targetPort: 9003
 ---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: account-service
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -44,6 +49,7 @@ spec:
       labels:
         app: account-service
     spec:
+      serviceAccountName: account-service
       containers:
         - name: account-service
           image: cybwan/spring-consul-demo:account-service
