--- a/demo/cloud/consul/deployment-customer-service.yml
+++ b/demo/cloud/consul/deployment-customer-service.yml
@@ -15,6 +15,11 @@
 #    - port: 80
 #      targetPort: 9002
 ---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: customer-service
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -31,6 +36,7 @@ spec:
       labels:
         app: customer-service
     spec:
+      serviceAccountName: customer-service
       containers:
         - name: customer-service
           image: cybwan/spring-consul-demo:customer-service
