--- a/demo/cloud/consul/deployment-gateway-service.yaml
+++ b/demo/cloud/consul/deployment-gateway-service.yaml
@@ -10,6 +10,11 @@ spec:
     - port: 80
       targetPort: 8080
 ---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: gateway-service
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -26,6 +31,7 @@ spec:
       labels:
         app: gateway-service
     spec:
+      serviceAccountName: gateway-service
       containers:
         - name: gateway-service
           image: cybwan/spring-consul-demo:gateway-service
