--- a/demo/cloud/consul/deployment-order-service.yaml
+++ b/demo/cloud/consul/deployment-order-service.yaml
@@ -10,6 +10,11 @@
 #    - port: 80
 #      targetPort: 9000
 ---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: order-service
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -26,6 +31,7 @@ spec:
       labels:
         app: order-service
     spec:
+      serviceAccountName: order-service
       containers:
         - name: order-service
           image: cybwan/spring-consul-demo:order-service
