--- a/demo/cloud/demo/client/client-deploy.yaml
+++ b/demo/cloud/demo/client/client-deploy.yaml
@@ -1,23 +1,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: hangyin-client-demo
----
-apiVersion: v1
-kind: Service
-metadata:
-  labels:
-    app: client-demo
   name: client-demo
-spec:
-  type: NodePort
-  ports:
-  - name: app
-    port: 8083
-    targetPort: 8083
-    nodePort: 30083
-  selector:
-    app: client-demo
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -33,7 +17,7 @@ spec:
       labels:
         app: client-demo
     spec:
-      serviceAccountName: hangyin-client-demo
+      serviceAccountName: client-demo
       containers:
       - name: client-demo
         image: spurringworld/sc-client-demo:0.0.1
