--- a/demo/cloud/demo/server/server-props.yaml
+++ b/demo/cloud/demo/server/server-props.yaml
@@ -13,7 +13,7 @@ data:
     tiny.local-address=10
     
     ###Tiny SC server
-    tiny.sc-address=sc-tiny.consul-demo.svc.cluster.local:9191
+    tiny.sc-address=${tiny_svc_cluster_ip}:9191
 
     #Tiny Parameters
     tiny.params.package-max-size=15728640
@@ -28,7 +28,7 @@ data:
     
     spring.application.name=grpc-server
     ###
-    spring.cloud.consul.host=consul.default.svc.cluster.local
+    spring.cloud.consul.host=${consul_svc_cluster_ip}
     spring.cloud.consul.port=8500
     spring.cloud.consul.discovery.prefer-ip-address=true
     spring.cloud.consul.discovery.instanceId=${spring.application.name}:${vcap.application.instance_id:${spring.application.instance_id:${random.value}}}
