add eureka demo.

--- a/demo/cloud/eureka/provider1.yml
+++ b/demo/cloud/eureka/provider1.yml
@@ -12,7 +12,7 @@ data:
     spring:
       application:
         # 应用名称
-        name: provider-user
+        name: cloud-provider
     
     # eureka 配置
     eureka:
