--- a/demo/cloud/eureka/provider2.yml
+++ b/demo/cloud/eureka/provider2.yml
@@ -6,13 +6,13 @@ data:
   application.yml: |
     # 应用端口
     server:
-      port: 7902
+      port: 7901
       servlet:
         context-path:
     spring:
       application:
         # 应用名称
-        name: provider-user
+        name: cloud-provider
     
     # eureka 配置
     eureka:
@@ -32,7 +32,7 @@ metadata:
   name: provider2
 spec:
   ports:
-    - port: 7902
+    - port: 7901
       name: provider2-port
   selector:
     app: provider2
@@ -57,7 +57,7 @@ spec:
         - name: provider2
           image: cybwan/spring-eureka-demo:provider2
           ports:
-            - containerPort: 7902
+            - containerPort: 7901
           volumeMounts:
             - mountPath: /config
               name: javacfg
